deploy/15.userlist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userlist-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: "userlist.ssongman.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: userlist-svc
            port:
              number: 80
  #tls:
  #- hosts:
  #  - '*.ssongman.duckdns.org'
  #  secretName: wildcard-cert
